--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Richard Adewale Tella
-logo: IMG_0451.HEIC
+logo: IMG_0451.png
 description: Analytical and results-driven Data Analyst with 1 year of experience leveraging Power BI, SQL, and Excel to uncover insights and support data-driven decision-making. Passionate about transforming complex data into clear, actionable visuals that empower business growth.
 # show_downloads: true
 # google_analytics:
